[gd_scene load_steps=3 format=2]

[ext_resource path="res://game_instructions/game_instructions.gd" type="Script" id=1]
[ext_resource path="res://game_instructions/new_dynamicfont.tres" type="DynamicFont" id=2]

[node name="GameInstructions" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_min_size = Vector2( 960, 540 )
script = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.05
anchor_top = 0.05
anchor_right = 0.95
anchor_bottom = 0.95

[node name="Title" type="Label" parent="VBoxContainer"]
margin_right = 864.0
margin_bottom = 75.0
custom_fonts/font = ExtResource( 2 )
text = "Mischievous Die
"
align = 1

[node name="Text" type="RichTextLabel" parent="VBoxContainer"]
margin_top = 79.0
margin_right = 864.0
margin_bottom = 446.0
size_flags_vertical = 3
custom_fonts/normal_font = ExtResource( 2 )
fit_content_height = true

[node name="ContinueIndicator" type="Label" parent="VBoxContainer"]
margin_top = 450.0
margin_right = 864.0
margin_bottom = 486.0
custom_fonts/font = ExtResource( 2 )
text = "> CONTINUE"
align = 2

[node name="TextTimer" type="Timer" parent="."]
wait_time = 0.02

[connection signal="timeout" from="TextTimer" to="." method="_on_TextTimer_timeout"]
